--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,14 +1,32 @@
 .container{
     margin: 20px;
-}
-
-#formulario{
     border: 1px black solid;
     border-radius: 5px;
+}
+
+#formulario{ 
     padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #formulario input{
     width: 100%;
     margin-bottom: 5px;
+    height: 30px;
+}
+
+#button{
+    max-width: 30%;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
+    transition: 0.5s;
+    border: black 1px solid;
+}
+
+#button:hover{
+    color: white;
+    background-color: black;
 }
