--- a/css/menu.css
+++ b/css/menu.css
@@ -8,9 +8,11 @@
 nav{
     display: flex;
     justify-content: space-evenly;
-    max-width: 100vw;
+    min-width: 100vw;
     border: black 1px solid;
-    
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 nav h1{
@@ -63,4 +65,10 @@ nav h1{
     color: white;
     display: block;
     height: 25px;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
 }
