--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,14 @@
     min-height: 30vh;
 }
 
+main{
+    background-color: black;
+    color: white;
+}
+.main_banner video{
+    width: 100vw;
+}
+
 .text{
     width: 40vw;
     transition: 0.5s;
@@ -31,4 +39,54 @@
 
 #right:hover{
     left: 0;
+}
+
+#first_pic{
+    background-image: url(../resources/img/hiver.jpg);
+    background-size:contain;
+    background-repeat: round;
+    height: 30vh;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 28%;
+    text-align: center;
+}
+
+#first_pic h1{
+    backdrop-filter: blur(2px);
+    display: inline-block;
+    width: fit-content;
+    border-radius: 20%;
+}
+
+.intersection{
+    margin: 10vw;
+}
+
+.intersection > p{
+    margin: 10px 0;
+}
+
+.models{
+    display: flex;
+    max-height: 600px;
+    flex-direction: row-reverse;
+}
+
+#mujer_coffee{
+    width: 100vw;
+    max-height: inherit;
+    filter: blur(10px);
+    transition: 1s;
+}
+
+#hombre_coffee{
+    max-width: 40vw;
+    max-height: inherit;
+    position: absolute;
+    margin-top: 5%;
+    opacity: 0;
+    transition: 1s;
 }
