--- a/css/horarios.css
+++ b/css/horarios.css
@@ -25,10 +25,12 @@ table a{
     height: 100%;
     width: 100%;
     color: black;
+    transition: 0.2s;
 
 }
 
 table a:hover{
     background-color: black;
     color: white;
+    transform: scale(2);
 }
