--- a/css/index.css
+++ b/css/index.css
@@ -12,35 +12,6 @@ main{
     width: 100vw;
 }
 
-.text{
-    width: 40vw;
-    transition: 0.5s;
-    font-size: 30px;
-    text-align: center;
-    padding: 10px;
-    max-height: 20vh;
-}
-
-#left{
-    position: relative;
-    right: 20vw;
-    background-color: rgba(199, 145, 45, 0.668);
-}
-
-#right{
-    position: relative;
-    left: 20vw;
-    background-color: rgba(218, 195, 151, 0.668);
-}
-
-#left:hover{
-    right: 0;
-}
-
-#right:hover{
-    left: 0;
-}
-
 #first_pic{
     background-image: url(../resources/img/hiver.jpg);
     background-size:contain;
@@ -50,7 +21,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 28%;
+    padding: 0 24%;
     text-align: center;
 }
 
@@ -63,10 +34,37 @@ main{
 
 .intersection{
     margin: 10vw;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.intersection > h2{
+    font-size: 40px;
+    margin-bottom: 25px;
 }
 
 .intersection > p{
-    margin: 10px 0;
+    margin-bottom: 10px;
+}
+
+.intersection > a{
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    border: 1px white solid;
+    padding: 5px;
+    margin-top: 20px;
+    border-radius: 20px;
+    transition: 0.5s ease-in-out;
+    width: 30vw;
+    text-align: center;
+}
+
+.intersection > a:hover{
+    color: black;
+    background-color: white;
 }
 
 .models{
@@ -79,7 +77,7 @@ main{
     width: 100vw;
     max-height: inherit;
     filter: blur(10px);
-    transition: 1s;
+    transition: 1.5s ease-in-out;
 }
 
 #hombre_coffee{
@@ -88,5 +86,13 @@ main{
     position: absolute;
     margin-top: 5%;
     opacity: 0;
+    transition: 1.5s ease-in-out;
+}
+
+.map{
     transition: 1s;
+}
+
+.map iframe{
+    width: 100vw;
 }
