--- a/css/productos.css
+++ b/css/productos.css
@@ -4,6 +4,11 @@ html{
 
 main{
     padding: 0 20px 20px 20px;
+    margin-top: 0;
+}
+
+.productos{
+    padding-top: 50px;
 }
 
 .producto{
@@ -11,12 +16,12 @@ main{
     display: flex;
     border: solid black 1px;
     border-radius: 20px;
-    transition: 0.5s;
+    transition: 0.5s ease-in-out;
 }
 
 .producto:hover{
-    background-color: black;
-    color: white;
+    background-color: #264d62;
+    color: black;
 }
 
 .producto .texto{
