--- a/css/contacto.css
+++ b/css/contacto.css
@@ -30,3 +30,17 @@
     color: white;
     background-color: black;
 }
+
+#map iframe{
+    width: 100vw;
+    height: 70vh;
+}
+
+p{
+    font-size: 12px;
+}
+
+h1{
+    font-size: 30px;
+    text-align: center;
+}
