--- a/css/index.css
+++ b/css/index.css
@@ -1,98 +1,11 @@
-.container{
-    display: flex;
-    justify-content: space-between;
-    min-height: 30vh;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
-main{
-    background-color: black;
-    color: white;
-}
-.main_banner video{
+iframe{
     width: 100vw;
-}
-
-#first_pic{
-    background-image: url(../resources/img/hiver.jpg);
-    background-size:contain;
-    background-repeat: round;
-    height: 30vh;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 24%;
-    text-align: center;
-}
-
-#first_pic h1{
-    backdrop-filter: blur(2px);
-    display: inline-block;
-    width: fit-content;
-    border-radius: 20%;
-}
-
-.intersection{
-    margin: 10vw;
-    padding: 10px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.intersection > h2{
-    font-size: 40px;
-    margin-bottom: 25px;
-}
-
-.intersection > p{
-    margin-bottom: 10px;
-}
-
-.intersection > a{
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    border: 1px white solid;
-    padding: 5px;
-    margin-top: 20px;
-    border-radius: 20px;
-    transition: 0.5s ease-in-out;
-    width: 30vw;
-    text-align: center;
-}
-
-.intersection > a:hover{
-    color: black;
-    background-color: white;
-}
-
-.models{
-    display: flex;
-    max-height: 600px;
-    flex-direction: row-reverse;
-}
-
-#mujer_coffee{
-    width: 100vw;
-    max-height: inherit;
-    filter: blur(10px);
-    transition: 1.5s ease-in-out;
-}
-
-#hombre_coffee{
-    max-width: 40vw;
-    max-height: inherit;
-    position: absolute;
-    margin-top: 5%;
-    opacity: 0;
-    transition: 1.5s ease-in-out;
-}
-
-.map{
-    transition: 1s;
-}
-
-.map iframe{
-    width: 100vw;
+    height: 100vh;
 }
